fixing issues on IE11

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1560,7 +1560,6 @@ section#search {
 					}
 					label:first-of-type {
 						margin-left: 10px;
-						float: left;
 					}
 					#tab1:checked ~ #content1,
 					#tab2:checked ~ #content2,
